hotfix: Directly queries from breakpoint without additional function and prevents overflowing

--- a/src/layout/dashboard/DashboardLayout.module.css
+++ b/src/layout/dashboard/DashboardLayout.module.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     width: 100%;
     padding: 0 15px;
+    overflow: hidden;
 
     @media (min-width: 992px) {
         width: calc(100% - 100px);
